[tool.poetry]
name = "rest_opt_pricer"
version = "0.1.0"
description = ""
authors = ["Blair Azzopardi <blairuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
aiohttp = "^3.8.4"
numpy = "^1.24.2"
pandas = "^1.5.3"
scipy = "^1.10.1"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
